fixing z-index for socials

--- a/src/components/Socials/socials.scss
+++ b/src/components/Socials/socials.scss
@@ -5,6 +5,7 @@
   top: 50%;
   left: 0;
   transform: translate(0, -50%);
+  z-index: 20;
 
   @media (max-width: 700px) {
     top: 0;
